fixed spacing on phone screen for contents and nav

--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@
     max-width: 1280px;
     height: 100%;
     padding: 0 1.5rem;
-    margin: auto; 
-    overflow: hidden;}
+    overflow: hidden;
+    margin: auto;}
 
 .text-centered {
     text-align: center;
@@ -13,7 +13,8 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    padding-top: 1rem; }
+    padding-top: 1rem; 
+    font-size: 2rem;}
     #main-nav ul {
         display: flex;
         justify-content: center; 
@@ -109,39 +110,57 @@
     #about-section .about-info {
         display: grid;
         grid-template-areas: "bioimage bio bio" "view1 view2 view3";
-        grid-gap: 1.2rem;
+        grid-gap: 1rem;
         color: #5f5f5f; }
       
       #about-section .bio-image {
         grid-area: bioimage;
         border-radius:50%;
-        padding-left: 1rem;
+        padding-left: 3rem;
         max-width: 800px;
         height: auto; }
       
       #about-section .bio {
-        grid-area: bio;
-        padding: 0.8rem; }
+        grid-area: bio; 
+        max-width: 800px;
+        width: 95%;}
       
       #about-section .view1 {
         grid-area: view1;
         max-width: 800px;
         width: 100%;
+        overflow:hidden;
         height: auto; }
       
       #about-section .view2 {
         grid-area: view2;
         max-width: 800px;
         width: 100%;
+        overflow:hidden;
         height: auto; }
       
       #about-section .view3 {
         grid-area: view3;
         max-width: 800px;
         width: 100%;
+        overflow:hidden;
         height: auto; }
 
 @media (max-width: 500px) {
+    .container {
+        max-width: 1280px;
+        height: 100%;
+        padding: 0 1.5rem;
+        overflow: hidden;
+    }
+    #main-nav {
+        flex-direction: column;
+        align-items: center; }
+        #main-nav ul {
+            padding: 0rem;
+        }
+        #main-nav li {
+          padding: 1rem; }
     #about-section .about-info {
         grid-template-areas: 'bioimage' 'bio' 'view1' 'view2' 'view3';}
     }
